--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fisicamente</title>
+  <title>Bibliografia</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
@@ -13,22 +13,177 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça">Fisicamente</h1>
-
+    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
   </div>
   <div class="conteudo">
-    <h1> Conteúdo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut amet beatae eos sapiente distinctio
-      praesentium, tempora aperiam minima consectetur, nam dignissimos atque? Reiciendis labore quis illum dignissimos,
-      omnis impedit.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit officia veniam quasi commodi in, accusantium
-      autem optio, cumque consectetur rem mollitia consequuntur excepturi, praesentium ut voluptatum nostrum.
-      Blanditiis, itaque enim.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque praesentium rem corrupti autem, eos, tempora,
-      vel nesciunt similique iure provident sit iusto? Aliquam, consequatur recusandae maxime reprehenderit molestias
-      earum est.</p>
+    <h1><strong class="textosTitulo"> Bibliografia</strong></h1>
+    <hr>
+    <p>HELERBROCK, Rafael. "O que é onda?" Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-onda.htm. Acesso em 13 de março de 2023.</p>
+      <br>
+    <p>HELERBROCK, Rafael. "Classificação das ondas"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/a-classificacao-das-ondas.htm. Acesso em 14 de março de 2023. </p>
+      <br>
+    <p>“O que é uma onda?”Pedro Loos, Youtube, 24 de julho de 2020 , duração, local de consulta ( O que é uma Onda? -
+      YouTube), Acesso em 13 de março de 2023</p>
+      <br>
+    <p>GOUVEIA, Rosimar. Ondas. Toda Matéria. Disponível em: https://www.todamateria.com.br/ondas/. Acesso em: 14 mar.
+      2023</p>
+      <br>
+    <p>Borges, Frederico. “Ondas”: Mundo Educação. Disponível em: Ondas. Conceito, natureza e tipos de ondas - Mundo
+      Educação (uol.com.br). Acesso em 13 de março de 2023.
+    </p>
+    <br>
+    <p>CARDOSO, Mayara “Modelo Atômico de Broglie”, InfoEscola, Disponível em:Modelo atômico de Broglie - Química -
+      InfoEscola, Acesso em 13 de março de 2023.
+    </p>
+    <br>
+    <p>GUILHERME, Luiz. "Ondas mecânicas"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/ondas-mecanicas.htm. Acesso em 18 de março de 2023.</p>
+    <p>GOUVEIA, Rosimar. Ondas. Toda Matéria, [s.d.]. Disponível em: https://www.todamateria.com.br/ondas/. Acesso em:
+      18 mar. 2023</p>
+      <br>
+    <p>MELÔ, Pâmella. "Ondulatoria"; Mundo Educação. Disponível em:
+      https://brasilescola.uol.com.br/fisica/ondas-mecanicas.htm. Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>HELERBROCK, Rafael. "Primeira Lei de Newton"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/primeira-lei-newton.htm. Acesso em 15 de março de 2023.</p>
+      <br>
+    <p>
+      “A Primeira Lei de Newton (Lei da Inércia) Explicada | Episódio 4
+      ”Ciência Todo Dia, Youtube, 22 de junho de 2020 ,local de consulta (A Primeira Lei de Newton (Lei da Inércia)
+      Explicada | Episódio 4 - YouTube), Acesso em 15 de março de 2023</p>
+      <br>
+    <p>MELO, Pâmella Raphaella. "Segunda lei de Newton"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.</p>
+      <br>
+    <p>
+      HELERBROCK, Rafael. "Terceira lei de Newton"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.</p>
+      <br>
+    <p>HELERBROCK, Rafael. “Mecânica”, Brasil Escola. Disponível em https://brasilescola.uol.com.br/fisica/mecanica.htm
+      . Acesso em 18 de março de 2023.
+    </p>
+    <br>
+    <p>Silas da Silva Júnior, Joab. “Mecânica”, Mundo Educação. Disponível em
+      https://mundoeducacao.uol.com.br/fisica/mecanica.htm . Acesso em 18 de março de 2023.
+    </p>
+    <br>
+    <p>
+      FERNANDES, Mariana.”Física mecânica: conceitos, fórmulas e exercícios [Física no Enem], PUC Goiás. Disponível em
+      https://ead.pucgoias.edu.br/blog/fisica-mecanica . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>
+      DIAS, Fabiana. “Mecânica”, Educa+Brasil. Disponível em https://www.educamaisbrasil.com.br/enem/fisica/mecanica .
+      Acesso em 18 de março de 2023.
+    </p>
+    <br>
+    <p>MELO, Augusto. “Movimento Uniforme-noções preliminares”. Disponível em
+      https://www.cparaiso.com.br/pdf/2018-02-mecanica-movimento-uniforme-26022018.pdf . Acesso em 18 de março de 2023.
+    </p>
+    <br>
+    <p>
+      MARTINS, Lucas. “Movimento Uniforme (MU)”, INFOESCOLA-navegando e aprendendo. Disponível em
+      https://www.infoescola.com/fisica/movimento-uniforme-mu/ . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>
+      GOUVEIA, Rosimar.”Movimento Retilíneo Uniforme”, Toda Matéria. Disponível em
+      https://www.todamateria.com.br/movimento-retilineo-uniforme/ . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>OLIVEIRA, Davi. “Movimento Circular Uniforme - Aula 01”, Davi Oliveira - Física 2.0. Disponível em
+      https://www.youtube.com/watch?v=P28aPQvFhmE . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>
+      HELERBROCK, Rafael. ”Dinâmica”, Brasil Escola. Disponível em
+      https://brasilescola.uol.com.br/fisica/dinamica.htm#:~:text=Dinâmica%20é%20a%20área%20da,lei%20da%20ação%20e%20reação
+      . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>
+      HELERBROCK, Rafael. ”Leis de Newton”, Brasil Escola. Disponível em
+      https://brasilescola.uol.com.br/fisica/leis-newton.htm . Acesso em 18 de março de 2023.</p>
+      <br>
+    <p>
+      LOSS, Pedro.”As 3 Leis de Newton EXPLICADAS”, Ciência Todo Dia. Disponível em
+      https://www.youtube.com/watch?v=B2u8FYE9fWk Acesso em 18 de março de 2023.
+    </p>
+    <br>
+    <p>DIAS, Fabiana. ”Estática”, Educa+Brasil. Disponível em https://www.educamaisbrasil.com.br/enem/fisica/estatica .
+      Acesso em 19 de março de 2023.
+    </p>
+    <br>
+    <p>
+      NOPES, Eduardo Lages. “Estática – Conceitos e Conceitos e Princípios Fundamentais”, Universidade Federal de
+      Alagoas. Disponível em
+      https://ctec.ufal.br/professor/enl/aurb006/7%20-%20Estatica%20-%20Conceitos%20e%20Principios%20Fundamentais.pdf .
+      Acesso em 19 de março de 2023.</p>
+      <br>
+    <p>GOUVEIA, Rosimar. “Teoria da Relatividade”, Toda Matéria. Disponível em
+      https://www.todamateria.com.br/teoria-da-relatividade-2/ . Acesso em 19 de março de 2023.</p>
+      <br>
+    <p>BETZ, Michel. “Mecânica Quântica( Física Quântica)”, FísicaNet. Disponível em
+      https://www.fisica.net/mecanica-quantica/#:~:text=A%20Mecânica%20Quântica%20(Física%20Quântica,descrever%20fenômenos%20macroscópicos%20em%20diversos
+      . Acesso em 19 de março de 2023.
+    </p>
+    <br>
+    <p>SILVA, Domiciano Correa Marques da. "Processos de propagação de calor"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/processo-propagacao-calor.htm . Acesso em 15 de março de 2023.</p>
+      <br>
+    <p>ASTH, Rafael. “Calor e Temperatura”. Toda Matéria. Disponível em:
+      https://www.todamateria.com.br/calor-e-temperatura/. Acesso em: 16 mar. 2023.</p><br>
+    <p>HELERBROCK, Rafael. "Termologia"; Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/termologia.htm. Acesso em 16 de março de 2023.</p><br>
+    <p>RICARDO PRASS, Alberto. “Física Térmica”. FísicaNET. Disponível em:
+      https://www.fisica.net/fisicatermica/#:~:text=A%20F%C3%ADsica%20T%C3%A9rmica%20ou%20Termologia,estudo%20t%C3%A9rmico%20dos%20gases%20etc
+      . Acesso em 17 mar. 2023.</p><br>
+    <p>HELERBROCK, Rafael. “Termologia”. Mundo educação. Disponível em:
+      https://mundoeducacao.uol.com.br/fisica/termologia.htm. Acesso em: 18 mar. 2023.</p><br>
+    <p>Fundamentals of Heat and Mass Transfer, de Frank P. Incropera e David P. DeWitt.
+    </p><br>
+    <p>Heat Transfer, de J.P. Holman.
+    </p><br>
+    <p>An Introduction to Thermal Physics, de Daniel V. Schroeder.
+    </p><br>
+    <p>Bejan, A. (2013). Convection heat transfer. John Wiley & Sons.
+    </p><br>
+    <p>Çengel, Y. A., & Ghajar, A. J. (2015). Heat and mass transfer: fundamentals and applications. McGraw-Hill
+      Education.
+    </p><br>
+    <p>"Thermal Radiation Heat Transfer" de Robert Siegel e John Howell.
+    </p><br>
+    <p>HELERBROCK, Rafael. “Energia”, Brasil Escola. Disponível em https://brasilescola.uol.com.br/fisica/energia.htm .
+      Acesso em 19 de março de 2023.</p><br>
+<p>MELO, Pâmella Raphaella. “Energia mecânica”, PrePara Enem. Disponível em https://www.preparaenem.com/fisica/energia-mecanica.htm . Acesso em 19 de março de 2023.</p><br>
+<p>ANJOS, Talita .”Agitação molecular dos Corpos”, Canal do Educador. 
+  Disponível em https://educador.brasilescola.uol.com.br/estrategias-ensino/agitacao-molecular-dos-corpos.htm . Acesso em 19 de março de 2023.</p><br>
+<p>
+  HELERBROCK, Rafael. ”Energia Térmica”, Brasil Escola. Disponível em https://brasilescola.uol.com.br/fisica/energia-termica.htm .Acesso em 19 de março de 2023.</p><br>
+<p>MEGAWHAT. “Energia Quimica”. Disponível em https://megawhat.energy/verbetes/320/energia-quimica .Acesso em 19 de março de 2023.</p><br>
+<p>HELERBROCK, Rafael. "Fissão Nuclear”, Brasil Escola. Disponível em https://brasilescola.uol.com.br/fisica/fissao-nuclear.htm  .Acesso em 19 de março de 2023.
+</p><br>
+<p>BATISTA, Carolina. “Fusão Nuclear”. Toda Matéria”. Disponível em https://www.todamateria.com.br/fusao-nuclear/ . Acesso em 19 de março de 2023.</p><br>
+<p>GOUVEIA, Rosimar. “Corrente Elétrica”. “Toda Matéria”. disponível em https://www.todamateria.com.br/corrente-eletrica/. Acesso em 23  de março de 2023.</p><br>
+<p>
+  ALVES, Pedro. “O que é corrente elétrica? Fórmulas e características”. “Manual da Eletrônica”. Disponível em O que é corrente elétrica? Fórmulas e características! (manualdaeletronica.com.br). Acesso em 23 de março de 2023.
+  </p><br>
+<p>
+  HELERBROCK, Rafael. “Corrente Elétrica”. “Brasil Escola" disponível em https://brasilescola.uol.com.br/fisica/corrente-eletrica.htm. Acesso em 23 de março de 2023.</p><br>
+<p>HELERBROCK, Rafael. ”Óptica”. Mundo educação
+  Disponível em: https://mundoeducacao.uol.com.br/fisica/optica.htm  Acesso em: 24 mar. 2023</p><br>
+<p>TEIXEIRA, Mariane Mendes."O que é Óptica Geométrica?" Brasil Escola. Disponível em:https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-optica-geometrica.htm.  Acesso em 26 de março de 2023.
+</p><br>
+<p>MARQUES,Gil da Costa; MELLO,Luiz Adolfo. “Óptica Curso de Extensão” ri.ufs.br Disponível em:https://ri.ufs.br/bitstream/riufs/11378/2/OpticaCursoExtensao.pdf. Acesso em: 31 de março de 2023</p><br>
+<p>PRAVALER. “Luz – fontes, propagação e principais fenômenos ópticos” Pravaler Disponível em:https://www.pravaler.com.br/luz-fontes-propagacao-e-principais-fenomenos-opticos/. Acesso em : 2 de abril de 2023</p><br>
+<p>HELERBROCK, Rafael. "Óptica". Prepara Enem. Disponível em: https://www.preparaenem.com/fisica/optica.htm. Acesso em: 11 de abril de 2023</p><br>
+<p>DEON, Dante. “Óptica Geométrica”. SlidePlayer. Disponível em: https://slideplayer.com.br/slide/363434/2. Acesso em: 12 de abril de 2023</p><br>
+<p>GOETHE, JW von. Doutrina das cores. Editora Nova Alexandria, 2018. Acesso em: 18 de abril de 2023</p><br>
+
+
+
+
+
+
   </div>
-  <div class="esquerdo">
+  <div class="esquerdoBibli">
     <h1>Tópicos</h1>
     <br>
 
@@ -129,20 +284,6 @@
       </button></a>
     <br>
   </div>
-</button></a>
-<br><a href="Optica.html"><button type="button" class="btn">
-    <strong>Bibliografia</strong>
-    <div id="container-stars">
-      <div id="stars"></div>
-    </div>
-
-    <div id="glow">
-      <div class="circle"></div>
-      <div class="circle"></div>
-    </div>
-  </button></a>
-<br>
-</div>
   <div class="rodape"></div>
 
 </body>
