--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
         </div>
       </button></a>
     <br>
-  </div>
-  </button></a>
-  <br><a href="Bibliografia.html"><button type="button" class="btn">
+    <a href="Bibliografia.html"><button type="button" class="btn">
       <strong>Bibliografia</strong>
       <div id="container-stars">
         <div id="stars"></div>
@@ -142,7 +140,10 @@
       </div>
     </button></a>
   <br>
+
   </div>
+
+  
   <div class="rodape"></div>
 
 </body>
