quase termino de mecanica

--- a/Mecanica.html
+++ b/Mecanica.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
+    <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
@@ -77,20 +77,7 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <h3><strong class="textosTitulo">Cinematica
-
-      </strong></h3>
-    <br>
-
-    <p>A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
-      movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
-      movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
-      2023).</p>
-
-    <img src="Imagens/fotomecanica2.webp" alt="Forças" width="800px">
-    <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
-        Aqui</a>
-    </legend>
+   
     <br>
     <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
     <br>
@@ -131,9 +118,9 @@
       continuamente em direção ao centro da circunferência.(OLIVEIRA, 2023).
       A equação desse movimento é:
     </p>
-    <p> θ = ω*t
+    <p> <strong class="textosTitulo">  θ = ω*t
+    </strong></p>
 
-    </p>
 
 
     <p> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
@@ -150,11 +137,9 @@
     <h3>Tópicos em Mecanica</h3>
     <br>
     <ul>
-      <li><a href=""><strong> Mecanica Relativista</strong></a></li>
+      <li><a href="MecanicaRe.html"><strong> Mecanica Relativista e Cinematica</strong></a></li>
       <br>
-      <li><a href=""><strong> Cinematica </strong></a></li>
-      <br>
-      <li><a href=""><strong> Dinamica</strong></a></li>
+      <li><a href="Dinamica.html"><strong> Dinamica e Estatica</strong></a></li>
       <br>
       
     </ul>
