--- a/Ondas.html
+++ b/Ondas.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="h1cabeça"><strong class="cabeça"> Fisicamente </strong></h1>
+    <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
