--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Correntes Elétricas</title>
+  <title>Eletricidade</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <script src="ProjetoIntegrador.js"></script>
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
@@ -15,107 +15,183 @@
   <div class="cabeçalho">
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
   </div>
-  <div class="esquerdo">
+  <div class="conteudo">
+    <h1><strong class="textosTitulo"><em> Correntes Elétricas </em> </strong></h1>
+    <br>
+    <p>
+    <blockquote>“A corrente elétrica designa o movimento ordenado de cargas elétricas, partículas eletrizadas chamadas
+      de íons ou elétrons, dentro de um sistema condutor”(GOUVEIA, 2023).</blockquote>
+
+    </p>
+    <br>
+    <p>
+      Para que ocorra esse movimento o sistema apresenta uma diferença de potencial elétrico(ddp) ou tensão elétrica.
+      Quando a energia elétrica passa por resistores ela pode ser transformada em energia térmica, este fenômeno é
+      conhecido como Efeito Joule.(GOUVEIA,2023) <br>
+    </p>
+    <br>
+    Um fio condutor pode facilitar ou dificultar a passagem de uma corrente elétrica, isso é calculado pela fórmula da
+    primeira lei de Ohm (R=U/I), onde R é a resistência elétrica, U é a tensão elétrica e I é a corrente
+    elétrica.(GOUVEIA,2023)
+    <br>
+    <br>
+    <p>
+      Eletrônicos e pilhas apresentam os pólos positivo e negativo, que é um claro exemplo do diferencial de potencial
+      elétrico. Existem dois sentidos de corrente elétrica, a corrente elétrica real é aquela que possui o sentido do
+      movimento dos elétrons, e a corrente elétrica convencional que tem sentido contrário ao movimento dos elétrons e
+      tem destaque pelo movimento das cargas elétricas positivas.(GOUVEIA,2023)</p>
+    <br>
+    <p>Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua (CC) e corrente
+      alternada (CA). A corrente contínua é gerada por pilhas e baterias, apresenta diferença de potencial (ddp)
+      contínua, além disso, possui sentido e intensidade constantes. A corrente alternada é gerada pelas usinas de
+      energia elétrica, apresenta diferença de potencial(ddp) alternada, com o sentido e intensidade
+      variados.(ALVES,2023)
+    </p>
+    <br>
+    <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite" width="600px"
+      style="margin-left: 110px;">
+    <legend style="text-align: center;"><a
+        href="https://www.manualdaeletronica.com.br/o-que-e-corrente-eletrica-formulas-caracteristicas/">
+        Imagem Dísponivel
+        Aqui</a>
+    </legend>
+    <br>
+    <p>A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um condutor, de
+      acordo com o Sistema Internacional de medidas (SI) ela é medida em Volts (V) e pode ser calculada pela fórmula:
+      U=R.I, ou seja, o inverso da resistência elétrica.(ALVES,2023)</p>
+    <br>
+    <p>A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um condutor durante
+      um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
+      através da fórmula:</p>
+    <img src="Imagens/formula.png" alt="formula">
+    <br>
+    <p>Onde,
+
+    </p>
+    <p> I= intensidade da corrente (A)
+    </p>
+    <p> Q= carga elétrica ( C)
+    </p>
+    <p> Δt: intervalo de tempo (s)
+    </p>
+    <br>
+    <p>
+      Por fim, a energia elétrica de uma corrente é produzida através do potencial elétrico de dois pontos de um
+      condutor, para calcular a energia elétrica é utilizada a seguinte equação:
+    </p>
+    <br>
+    <p>Eel = P . ∆t</p>
+    <p>Onde,
+
+    </p>
+    <p> Eel: energia elétrica (KWh)
+    </p>
+    <p> P: potência (KW)
+    </p>
+    <p> ∆t: variação do tempo (h)
+    </p>
+  </div>
+  <div class="esquerdoCorre">
     <h1>Tópicos</h1>
     <br>
 
     <a href="Ondas.html"><button type="button" class="btn">
-      <strong>Ondas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <strong>Ondas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-  <a href="Leis De Newton.html">
-    <button type="button" class="btn">
-      <strong>Leis de Newton</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br>
+    <a href="Leis De Newton.html">
+      <button type="button" class="btn">
+        <strong>Leis de Newton</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Mecanica.html">
-    <br><button type="button" class="btn">
-      <strong>Mecânica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Mecanica.html">
+      <br><button type="button" class="btn">
+        <strong>Mecânica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Energia.html">
-    <br><button type="button" class="btn">
-      <strong>Energia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Energia.html">
+      <br><button type="button" class="btn">
+        <strong>Energia</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Eletricidade.html">
-    <br><button type="button" class="btn">
-      <strong>Eletricidade</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="Eletricidade.html">
+      <br><button type="button" class="btn">
+        <strong>Eletricidade</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="CorrentesEletricas.html">
-    <br><button type="button" class="btn">
-      <strong>Correntes Elétricas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="CorrentesEletricas.html">
+      <br><button type="button" class="btn">
+        <strong>Correntes Elétricas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="TermoFisica.html">
-    <br><button type="button" class="btn">
-      <strong>Termofísica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <a href="TermoFisica.html">
+      <br><button type="button" class="btn">
+        <strong>Termofísica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br><a href="Optica.html"><button type="button" class="btn">
-      <strong>Óptica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br><a href="Optica.html"><button type="button" class="btn">
+        <strong>Óptica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-</div>
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+    <br>
+  </div>
   <div class="rodape"></div>
 
 </body>
