começo de energia e termofisica

--- a/Energia.html
+++ b/Energia.html
@@ -12,111 +12,162 @@
 </head>
 
 <body>
+
+
+
+
   <div class="cabeçalho">
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
   </div>
-  <div class="esquerdo">
-    <h1>Tópicos</h1>
+  <div class="conteudo">
+    <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
     <br>
+    <p>
+      A energia é uma palavra muito utilizada no nosso vocabulário, contudo muitas pessoas não compreendem seu
+      verdadeiro significado, mais especificamente na física.(HELERBROCK, 2023).
+      <br>
+    </p>
+    <br>
+    <p>
+    <blockquote>“Segundo Rafael Helerbrock, A energia é
+      expressa em muitas formas – cinética, potencial,
+      química, entre outras, mas, essencialmente,
+      trata-se de uma grandeza física abstrata,
+      relacionada com o movimento e que não pode
+      ser criada ou destruída, mas somente
+      transformada, mediante a aplicação de uma
+      força."
+    </blockquote><br>
+    </p>
+    <img src="Imagens/energia.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
+        Imagem Dísponivel
+        Aqui</a> </legend>
+    
+    <br>
+    <p> A energia é um conceito bem complexo que envolve outro conceito, o trabalho.
+      Existem na natureza cinco formas de energia: mecânica, térmica, elétrica, química e atômica.(HELERBROCK, 2023).
+    </p>
+    <br>
+    <p>
+      Segundo Pâmella Raphaella Melo, a energia mecânica é a energia associada ao movimento e à posição de um objeto.
+      Ela é composta por duas formas de energia: a energia cinética e a energia potencial.
 
-    <a href="Ondas.html"><button type="button" class="btn">
-      <strong>Ondas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-  <a href="Leis De Newton.html">
-    <button type="button" class="btn">
-      <strong>Leis de Newton</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+    </p>
+    <br>
+    <p> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do objeto, maior a
+      sua energia cinética.A fórmula para calcular a energia cinética é E = (1/2)mv², onde E é a energia cinética, m é a
+      massa do objeto e v é a sua velocidade.(Melo, 2023).</p>
+    <p> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto de referência.
+      Um objeto colocado em uma posição mais alta em relação ao solo, por exemplo, possui mais energia potencial do que
+      um objeto na mesma posição, mas mais próximo ao solo.(Melo, 2023).
+    </p>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Mecanica.html">
-    <br><button type="button" class="btn">
-      <strong>Mecânica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Energia.html">
-    <br><button type="button" class="btn">
-      <strong>Energia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+  </div>
+    <div class="esquerdoEnergia">
+      <h1>Tópicos</h1>
+      <br>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="Eletricidade.html">
-    <br><button type="button" class="btn">
-      <strong>Eletricidade</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="CorrentesEletricas.html">
-    <br><button type="button" class="btn">
-      <strong>Correntes Elétricas</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <a href="TermoFisica.html">
-    <br><button type="button" class="btn">
-      <strong>Termofísica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br><a href="Optica.html"><button type="button" class="btn">
-      <strong>Óptica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-</div>
-  <div class="rodape"></div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+    </div>
+    <div class="rodape"></div>
 
 </body>
 
